--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,3 +82,20 @@ for people that prefer not to see them */
   --footer-height: 100px;
   --header-height: 72px;
 }
+
+.visible-hidden {
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute !important;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.visible-hidden:focus {
+  clip: auto;
+  height: auto;
+  overflow: auto;
+  position: absolute;
+  width: auto;
+}
